# jinx

./: Jinx.prj  Jinx.pws  Makefile  README.md  main
src/: ClientSocket.cpp  ClientSocket.h  DOMTreeErrorReporter.cpp  EngineThreads.cpp  Makefile.am  Serial.cpp  Serial.h  Socket.cpp  Socket.h  Vector.cpp  Vector.h  abc.cpp  avatars.cpp  avatars.h  buffer.h  camera.cpp  camera.h  commands.cpp  commands.h  communication.cpp  communication.h  datavector.h  domerror.cpp  domerror.h  engine.cpp  engine.h  ezj.h  general.cpp  general.h  hemidome.c  input.cpp  input.h  joystick.cpp  joystick.h  main.cpp  math.cpp  math.h  parsehandlers.cpp  parsehandlers.h  sball.cpp  (+13 more)
src/config/: sax.cpp  sax.h  saxErrosNU.cpp  xmlsax.cpp  xmlsax.h
src/lixo/: main_movie.cpp  movieold.cpp  movieold.h  reader.h  xmlConvert.h
src/render/: calibration.cpp  calibration.h  drawScene.cpp  ezGLSL.cpp  ezGLSL.h  graphicalInput.cpp  graphicalOutput.cpp  head.cpp  head.h  locks.cpp  menu.cpp  posrender.cpp  render.cpp  render.h  ui.cpp
src/sound/: sound.cpp  sound.h
src/texture/: image.cpp  movie.cpp  movie.h  readrgb.cpp  readrgb.h  scale.cpp  texture.cpp  texture.h  textureBase.cpp  textureBmp.cpp  textureGridPlane.cpp  textureJpeg.cpp  texturePpm.cpp  textureRgb.cpp
src/wand/: posWand.cpp  wand.cpp  wand.h  wandFOBTracker.cpp  wandGlove.cpp  wandHeadTracking.cpp  wandSpaceBall.cpp
src/x3d/: x3d.cpp  x3d.h  x3dCore.cpp  x3dCore.h  x3dEnvironmental.cpp  x3dEnvironmental.h  x3dEnvironmentalSensor.cpp  x3dEnvironmentalSensor.h  x3dFields.cpp  x3dFields.h  x3dGeometry3D.cpp  x3dGeometry3D.h  (+35 more)
(+49 files in other folders)
