## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

jinx_CXXFLAGS =\
	 -Wall -Wimplicit -Wreturn-type -Wunused -Wswitch -Wcomment -Wuninitialized -Wparentheses -Wtraditional -Wpointer-arith -Wmissing-prototypes -Woverloaded-virtual\
	 -O1\
	 -g

bin_PROGRAMS = jinx

jinx_SOURCES = \
	ClientSocket.cpp

jinx_LDFLAGS = 

jinx_LDADD = 

